Bug 301676 - File Watcher widget should have minimum size
Summary: File Watcher widget should have minimum size
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-filewatcher (other bugs)
Version First Reported In: 4.8.80 (beta1)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks: plasmoid-resizing
  Show dependency treegraph
 
Reported: 2012-06-11 18:51 UTC by Janek Bevendorff
Modified: 2012-06-13 21:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janek Bevendorff 2012-06-11 18:51:02 UTC
The File Watcher widget can be scaled down until it nearly disappears.

Reproducible: Always

Steps to Reproduce:
1. Add the File Watcher widget to your desktop
2. Scale it down as far as possible
Actual Results:  
There is no scale limitation.

Expected Results:  
Widget should have a sensible minimum size.
Comment 1 Anne-Marie Mahfouf 2012-06-11 19:19:52 UTC
Git commit 365d0237accbb43b30f27201ff92d56783a535d2 by Anne-Marie Mahfouf.
Committed on 11/06/2012 at 21:16.
Pushed by annma into branch 'master'.

set a minimum size
FIXED-IN: 4.9

M  +1    -0    applets/fileWatcher/fileWatcher.cpp

http://commits.kde.org/kdeplasma-addons/365d0237accbb43b30f27201ff92d56783a535d2
Comment 2 Anne-Marie Mahfouf 2012-06-13 13:36:46 UTC
Git commit b7eff7326cbe4392bcbeb2c57371efc1b75c421a by Anne-Marie Mahfouf.
Committed on 13/06/2012 at 15:32.
Pushed by annma into branch 'master'.

fix the minimum size only on the desktop

M  +5    -1    applets/fileWatcher/fileWatcher.cpp

http://commits.kde.org/kdeplasma-addons/b7eff7326cbe4392bcbeb2c57371efc1b75c421a