set a minimum size

BUG: 301676
FIXED-IN: 4.9